--- a/react-practice/03-todolist/public/index.html
+++ b/react-practice/03-todolist/public/index.html
@@ -6,7 +6,7 @@
     <title>TodoList</title>
 </head>
 <body>
-    <noscript>You need to enable Javascript </noscript>
+    <noscript>You need to enable Javascript to run this app </noscript>
     <div id="root"></div>
 </body>
 </html>
