--- a/css-practice/flex-pip.html
+++ b/css-practice/flex-pip.html
@@ -17,7 +17,10 @@
             justify-content: center; /*定义项目在水平主轴上的对齐方式*/
             /* vertical-align: center; */
             flex-wrap: wrap; /*换行顺序, wrap第一行在上面*/
-            align-content:center; /*定义多根轴线的对齐方式, 如果只有一根轴线则不起作用*/
+            /*align-content 作用：会设置自由盒内部各个项目在垂直方向排列方式。
+            条件：必须对父元素设置属性display:flex，并且设置换行，flex-wrap:wrap这样这个属性的设置才会起作用。*/
+            /*定义多根轴线的对齐方式, 如果只有一根轴线则不起作用*/
+            align-content:center; 
             background: linear-gradient(top, #222,#333)
         }
         .pip{
@@ -28,6 +31,10 @@
             margin:4px;
             background-color:#333;
             box-shadow:inset 0 3px #111,inset 0 -3px #555;
+        }
+        .pip-color{
+            background-color: orangered;
+            box-shadow:none;
         }
         [class$="face"]{
             margin:16px;
@@ -47,14 +54,186 @@
         }
         .first-face{
             display:flex;
-            justify-content:center;
-            align-items:center;
+            justify-content:center; /*水平居中*/
+            align-items:center; /*垂直居中*/
         }
+        .second-face{
+            display:flex;
+            justify-content: space-between; /*两端对齐*/
+        }
+        .second-face .pip:nth-of-type(2){ /*选择父元素的第二个元素*/
+            align-self: flex-end;
+        }
+        .third-face{
+            display:flex;
+            justify-content: space-between;
+        }
+        .third-face .pip:nth-of-type(2){
+            align-self: center;
+        }
+        .third-face .pip:nth-of-type(3){
+            align-self: flex-end;
+        }
+        .fourth-face, .six-face{
+            display:flex;
+            justify-content: space-between;
+        }
+        .fourth-face .column, .six-face .column{
+            display:flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .fifth-face{
+            display:flex;
+            justify-content: space-between;
+        }
+        .fifth-face .column{
+            display:flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        .fifth-face .column:nth-of-type(2){
+            justify-content: center;
+        }
+        .six1-face{
+            display:flex;
+            justify-content: space-between;
+        }
+        .six1-face .column{
+            display:flex;
+            flex-direction: column;
+            justify-content: space-between;
+        } 
+        .seven-face{
+            display:flex;
+            flex-wrap:wrap; /*换行方式, 默认不换行*/
+        }
+        .seven-face .column{
+           display:flex;
+           /*flex-basis属性定义了在分配多余空间之前，项目占据的主轴空间（main size）。*/
+           /*flex-basis:100% 即每个项目占据100%的空间，即每个项目占据一行*/
+           flex-basis: 100%;
+        }
+        .seven-face .column:nth-of-type(2){
+            justify-content: center;
+        }
+        .seven-face .column:nth-of-type(3){
+            justify-content: space-between;
+        }
+        .nith-face{
+            display:flex;
+            flex-wrap:wrap;
+        }
+        .nith-face .column{
+            display:flex;
+        }
+        .fourth1-face{
+            display:flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            align-content: space-between;
+        }
+        
     </style>
 </head>
 <body>
     <div class="first-face">
         <div class="pip"></div>
+    </div>
+    <div class="second-face">
+        <span class="pip"></span>
+        <span class="pip"></span>
+    </div>
+    <div class="third-face">
+        <span class="pip"></span>
+        <span class="pip"></span>
+        <span class="pip"></span>
+    </div>
+    <div class="fourth-face">
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+    </div>
+    <div class="fourth1-face">
+            <span class="pip"></span>
+            <span class="pip"></span>
+            <span class="pip"></span>
+            <span class="pip pip-color"></span>
+    </div>
+    <div class="fifth-face">
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+    </div>
+    <div class="six-face">
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip pip-color"></span>
+            <span class="pip pip-color"></span>
+            <span class="pip pip-color"></span>
+        </div>
+    </div>
+    <div class="six1-face">
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip pip-color"></span>
+            <span class="pip pip-color"></span>
+        </div>
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+    </div>
+    <div class="seven-face">
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip pip-color"></span>
+        </div>
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+    </div>
+    <div class="nith-face">
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
+        <div class="column">
+            <span class="pip pip-color"></span>
+            <span class="pip pip-color"></span>
+            <span class="pip pip-color"></span>
+        </div>
+        <div class="column">
+            <span class="pip"></span>
+            <span class="pip"></span>
+            <span class="pip"></span>
+        </div>
     </div>
 </body>
 </html>
