--- a/css-practice/examples/imooc/index.html
+++ b/css-practice/examples/imooc/index.html
@@ -40,7 +40,7 @@
             <div class="nav_mid">
                 <div class="nav_mid_left">
                     <ul>
-                        <li><a href="#">首页</a></li>
+                        <li><a href="index.html">首页</a></li>
                         <li><a href="list.html">关于慕课</a></li>
                         <li><a href="list.html">新闻动态</a></li>
                         <li><a href="list.html">课程中心</a></li>
