--- a/css-practice/examples/imooc/index2.html
+++ b/css-practice/examples/imooc/index2.html
@@ -46,7 +46,7 @@
         <!-- ad end -->
         <div class="title">
             <ul>
-                <li><a href="#" class="title_on"><span>滚动新闻</span></a></li>
+                <li><a href="#" class="on">滚动新闻</a></li>
                 <li><a href="#">这是滚动新闻</a></li>
             </ul>
         </div>
@@ -54,11 +54,7 @@
         <div class="course">
             <ul>
                 <li><img src="images/bootstrap.jpg" alt="玩转BootStrap"/><span>玩转BootStrap</span></li>
-            </ul>
-            <ul>
                 <li class="qiye"><img src="images/qiye.jpg" alt="企业网站案例"/><span>企业网站案例</span></li>
-            </ul>
-            <ul>
                 <li><img src="images/js.jpg" alt="Javascript基础"/><span>Javascript基础</span></li>
             </ul>
         </div>
