--- a/css-practice/examples/imooc/index.html
+++ b/css-practice/examples/imooc/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imooc css example</title>
+    <title>仿imooc网站布局|researchlab</title>
     <link href="css/main.css" rel="stylesheet" type="text/css"/>
     <script src="js/setHomeFav.js" type="text/javascript"></script>
     <script src="js/myfocus-2.0.4.min.js" type="text/javascript"></script>
@@ -18,6 +18,7 @@
     <div class="top">
         <div class="top_content">
             <ul>
+                <li><a href="index2.html" style="color:blue;">新版首页</a></li>
                 <li><a href="#">联系我们</a></li>
                 <li><a href="#" onclick="AddFavorite(window.location, document.title)">加入收藏</a></li>
                 <li><a href="#" onclick="SetHome(window.location)">设为首页</a></li>
