--- a/css-practice/examples/imooc/index2.html
+++ b/css-practice/examples/imooc/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imooc</title>
+    <title>仿imooc网站布局新版首页|researchlab</title>
     <link href="css/main2.css" rel="stylesheet" type="text/css"/> 
     <script src="js/myfocus-2.0.4.min.js" type="text/javascript"></script>
     <script src="js/mf-pattern/mF_taobaomall.js" type="text/javascript"></script> 
@@ -26,6 +26,7 @@
                 <li><a href="#">帮助中心</a></li>
                 <li><a href="#">关于我们</a></li>
             </ul>
+            <span class="older"><a href="index.html">旧版首页</a></span>
         </div>
     </div>
     <!-- header end -->
