--- a/js-practice/moment/format.html
+++ b/js-practice/moment/format.html
@@ -35,14 +35,31 @@
         // console.log(currDate)
         // console.log(moment(moment().startOf('month').valueOf()).format('YYYY-MM-DD'))
         // console.log(moment(moment().endOf('month').valueOf()).format('YYYY-MM-DD'))
-        console.log(moment().subtract(2, 'hours').unix())
-        let t = moment().unix()
-        console.log(t)
-        console.log(moment(t*1000).format('YYYY-MM-DD HH:mm'))
-        console.log(moment(1604541060*1000).format('YYYY-MM-DD HH:mm'))
-        console.log(moment(1604541120*1000).format('YYYY-MM-DD HH:mm'))
-        console.log(moment(1606286877).format('YYYY-MM-DD HH:mm'))
-        console.log(moment(1606286877*1000).format('YYYY-MM-DD HH:mm'))
+        // console.log(moment().subtract(2, 'hours').unix())
+        // let t = moment().unix()
+        // console.log(t)
+        // console.log(moment(t*1000).format('YYYY-MM-DD HH:mm'))
+        // console.log(moment(1604541060*1000).format('YYYY-MM-DD HH:mm'))
+        // console.log(moment(1604541120*1000).format('YYYY-MM-DD HH:mm'))
+        // console.log(moment(1606286877).format('YYYY-MM-DD HH:mm'))
+        // console.log(moment(1606286877*1000).format('YYYY-MM-DD HH:mm'))
+        // console.log(moment().weekday(1).format('YYYY-MM-DD') +'T00:00:00')
+        // for (i = 1; i <=7; i++){
+        //     console.log(moment().weekday(i).format('YYYY-MM-DD'))
+        // }
+        // console.log(moment(moment().startOf('month').valueOf()).format('YYYY-MM-DD'))
+        // console.log(moment(moment().endOf('month').valueOf()).format('YYYY-MM-DD'))
+        // let s = moment().startOf('isoWeek').valueOf()
+        // let e = moment().endOf('isoWeek').valueOf()
+        // console.log(moment(e).format('YYYY-MM-DD'))
+        // let _times = []
+        // moment.locale('zh-cn');
+        // for (i = s; i<e; i+=86400000){
+        //     _times.push(moment(i).format('dddd'))
+        // }
+        
+        // console.log(_times)
+        // console.log(moment().day())
     </script>
 </body>
 </html>
